Update file(s) "/translations/" from "zikula/core"

--- a/translations/routes.en.yaml
+++ b/translations/routes.en.yaml
@@ -1,7 +1,5 @@
-doc: '/installdoc/{name}'
 fos_js_routing_js: '/js/routing.{_format}'
 home: /
-install: '/install/{stage}'
 liip_imagine_filter: '/media/cache/resolve/{filter}/{path}'
 liip_imagine_filter_runtime: '/media/cache/resolve/{filter}/rc/{hash}/{path}'
 oro_twig_inspector_template_link: '/_template/{template}'
@@ -15,14 +13,10 @@ translation_edit: '/admin/_trans/{configName}/{locale}/{domain}'
 translation_edit_in_place_update: '/admin/_trans_edit_in_place/{configName}/{locale}'
 translation_index: '/admin/_trans/{configName}'
 translation_show: '/admin/_trans/{configName}/{locale}/{domain}'
-upgrade: '/upgrade/{stage}'
-zikulaadminmodule_admin_adminpanel: '/panel/{acid}'
+zikulaadminmodule_admin_adminpanel: '/panel/{acslug}'
 zikulaadminmodule_admin_categorymenu: '/categorymenu/{acid}'
-zikulaadminmodule_admin_delete: '/deletecategory/{cid}'
 zikulaadminmodule_admin_index: /
-zikulaadminmodule_admin_modify: '/modifycategory/{cid}'
-zikulaadminmodule_admin_newcat: /newcategory
-zikulaadminmodule_admin_view: '/categories/{page}'
+zikulaadminmodule_admin_view: '/categories'
 zikulaadminmodule_admininterface_breadcrumbs: /admininterface/breadcrumbs
 zikulaadminmodule_admininterface_footer: /admininterface/footer
 zikulaadminmodule_admininterface_header: /admininterface/header
@@ -37,38 +31,13 @@ zikulaadminmodule_ajax_editcategory: /ajax/editcategory
 zikulaadminmodule_ajax_sortcategories: /ajax/sortcategories
 zikulaadminmodule_ajax_sortmodules: /ajax/sortmodules
 zikulaadminmodule_config_config: /config/config
-zikulablocksmodule_admin_view: /admin/view
-zikulablocksmodule_block_delete: '/admin/block/delete/{bid}'
-zikulablocksmodule_block_edit: '/admin/block/edit/{blockEntity}'
-zikulablocksmodule_block_new: /admin/block/new
-zikulablocksmodule_block_toggleblock: /admin/block/toggle-active
-zikulablocksmodule_block_view: '/admin/block/view/{bid}'
-zikulablocksmodule_config_config: /config/config
-zikulablocksmodule_placement_edit: '/admin/placement/edit/{pid}'
-zikulablocksmodule_position_delete: '/admin/position/delete/{pid}'
-zikulablocksmodule_position_edit: '/admin/position/edit/{positionEntity}'
-zikulabootstraptheme_ajax_changeuserstyle: /ajax/changeUserStyle
+zikuladefaulttheme_ajax_changeuserstyle: /ajax/changeUserStyle
 zikulacategoriesmodule_category_list: '/admin/category/list/{id}'
 zikulacategoriesmodule_node_contextmenu: '/admin/category/contextMenu/{action}/{id}'
 zikulacategoriesmodule_node_move: /admin/category/move
 zikulacategoriesmodule_registry_delete: '/registry/delete/{id}'
 zikulacategoriesmodule_registry_edit: '/registry/edit/{id}'
 zikulaextensionsmodule_config_config: /config
-zikulaextensionsmodule_extension_activate: '/activate/{id}/{token}'
-zikulaextensionsmodule_extension_compatibility: '/compatibility/{id}'
-zikulaextensionsmodule_extension_deactivate: '/deactivate/{id}/{token}'
-zikulaextensionsmodule_extension_install: '/install/{id}/{token}'
-zikulaextensionsmodule_extension_list: '/list/{page}'
-zikulaextensionsmodule_extension_modify: '/modify/{id}/{forceDefaults}'
-zikulaextensionsmodule_extension_postinstall: '/postinstall/{extensions}'
-zikulaextensionsmodule_extension_postuninstall: /post-uninstall
-zikulaextensionsmodule_extension_preview: '/theme-preview/{themeName}'
-zikulaextensionsmodule_extension_uninstall: '/uninstall/{id}/{token}'
-zikulaextensionsmodule_extension_upgrade: '/upgrade/{id}/{token}'
-zikulaextensionsmodule_extensioninstaller_cancelinstall: '/cancel-install/{id}'
-zikulaextensionsmodule_extensioninstaller_install: '/install/{id}'
-zikulaextensionsmodule_extensioninstaller_postinstall: '/postinstall/{extensions}'
-zikulaextensionsmodule_extensioninstaller_preinstall: '/preinstall/{id}'
 zikulaextensionsmodule_extensionsinterface_breadcrumbs: /extensionsinterface/breadcrumbs
 zikulaextensionsmodule_extensionsinterface_footer: /extensionsinterface/footer
 zikulaextensionsmodule_extensionsinterface_header: /extensionsinterface/header
@@ -89,8 +58,6 @@ zikulagroupsmodule_membership_join: '/membership/join/{gid}'
 zikulagroupsmodule_membership_leave: '/membership/leave/{gid}'
 zikulagroupsmodule_membership_list: '/membership/list/{gid}/{letter}/{page}'
 zikulagroupsmodule_membership_remove: '/membership/admin/remove/{gid}/{uid}'
-zikulamailermodule_config_config: /config/config
-zikulamailermodule_config_test: /config/test
 zikulamenumodule_menu_delete: '/admin/delete/{id}'
 zikulamenumodule_menu_edit: '/admin/edit/{id}'
 zikulamenumodule_menu_list: /admin/list
@@ -104,37 +71,15 @@ zikulapermissionsmodule_permission_list: /list
 zikulapermissionsmodule_permission_test: /test
 zikularoutesmodule_ajax_updatesortpositions: /ajax/updateSortPositions
 zikularoutesmodule_config_config: /config/config
-zikularoutesmodule_route_admindisplay: '/admin/route/{id}.{_format}'
-zikularoutesmodule_route_adminedit: '/admin/route/edit/{id}.{_format}'
-zikularoutesmodule_route_adminhandleselectedentries: /admin/routes/handleSelectedEntries
-zikularoutesmodule_route_adminindex: /admin/routes
-zikularoutesmodule_route_adminview: '/admin/routes/view/{sort}/{sortdir}/{page}/{num}.{_format}'
-zikularoutesmodule_route_display: '/route/{id}.{_format}'
-zikularoutesmodule_route_edit: '/route/edit/{id}.{_format}'
-zikularoutesmodule_route_handleselectedentries: /routes/handleSelectedEntries
-zikularoutesmodule_route_index: /routes
-zikularoutesmodule_route_view: '/routes/view/{sort}/{sortdir}/{page}/{num}.{_format}'
 zikularoutesmodule_update_dumpjsroutes: '/update/dump/{lang}'
 zikularoutesmodule_update_reload: /update/reload
 zikularoutesmodule_update_renew: /update/renew
-zikulascribitemodule_config_allowembeddedmedia: /config/allow-embedded-media
-zikulascribitemodule_config_settings: /config/settings
-zikulascribitemodule_editor_configure: '/configure/{editorId}'
-zikulascribitemodule_editor_list: /editors
-zikulascribitemodule_override_module: /override/module
-zikulascribitemodule_override_textarea: /override/textarea
-zikulasearchmodule_config_config: /config/config
-zikulasearchmodule_search_execute: '/{page}'
-zikulasearchmodule_search_recent: '/recent/{page}'
 zikulasecuritycentermodule_config_allowedhtml: /config/allowedhtml
 zikulasecuritycentermodule_config_config: /config/config
 zikulasecuritycentermodule_config_purifierconfig: '/config/purifierconfig/{reset}'
-zikulasecuritycentermodule_idslog_deleteentry: /idslog/deleteentry
-zikulasecuritycentermodule_idslog_export: /idslog/export
-zikulasecuritycentermodule_idslog_purge: /idslog/purge
-zikulasecuritycentermodule_idslog_view: '/idslog/view/{page}'
 zikulasettingsmodule_settings_main: /
 zikulasettingsmodule_settings_phpinfo: /phpinfo
+zikulasettingsmodule_settings_mailtest: /test
 zikulasettingsmodule_settings_toggleeditinplace: /toggleeditinplace
 zikulastaticcontentmodule_static_view: '/p/{name}'
 zikulathememodule_config_config: /config/config
